# wamr.mbt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  moon.mod.json
cmake/: Config.cmake.in  MoonBit.cmake
src/: CMakeLists.txt  wamr.c
src/main/: CMakeLists.txt  main.mbt  moon.pkg.json
src/wasm/: engine.mbt  exporttype.mbt  extern.mbt  func.mbt  functype.mbt  importtype.mbt  instance.mbt  module.mbt  moon.pkg.json  store.mbt  val.mbt  valtype.mbt  wasm.c  wasm.mbt
test/: moon.mod.json
test/fib/: fib.mbt  moon.pkg.json
